--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -1,7 +1,19 @@
-// Variables
-$font-stack: "Futura PT", Georgia;
+$font-stack: "Helvetica Neue", arial, sans-serif;
 $primary-color: #222;
 $secondary-color: #EEE;
+$primary-background: #FFFFFF;
+$secondary-background: #515151;
+$accent-background: #1C5AFF;
+$form-background: #F7F7F7;
+$input-background: #E0E0E0;
+$error-background: #ffbfbf;
+$success-accent: #dff0d8;
+$error-accent: #C30000;
+$success-accent-border: #2ecc71;
+$error-accent-border: #900;
+$input-border: #d7d7d7;
+$reset-space: 0;
+$half-size: 50%;
+$full-size: 100%;
 $small-amount: 10px;
 $med-amount: 20px;
-$large-amount: 50px;
