--- a/scss/utils/_placeholders.scss
+++ b/scss/utils/_placeholders.scss
@@ -6,5 +6,10 @@
 
 %reset-all-space {
   margin: 0 auto;
-  padding: 0 auto;
+  padding: 0;
+}
+
+%remove-bootstrap-side-padding {
+  margin-left: -15px;
+  margin-right: -15px;
 }
