--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
-#addressbookPage, #notesPage, #myAccountPage {
+#notesPage, #myAccountPage {
   margin: 0 auto;
   padding: 0; }
 
-#contactPage h3 {
-  margin-left: -15px;
-  margin-right: -15px; }
+#overview-list-content, #appointment-list-content, #to-do-list-content, #shopping-list-content, #notes-list-content, #contactPage .container-fluid h2, #contactPage .container-fluid h3, #contactPage h3 {
+  padding-left: 0;
+  padding-right: 0; }
 
 html {
   font-size: 62.5%; }
@@ -20,11 +20,11 @@ body {
   font: 1.6rem/1.25 "Helvetica Neue", arial, sans-serif; }
 
 .navbar {
-  font-size: 16px; }
+  font-size: 14px; }
 
 @media only screen and (min-width: 826px) {
   .navbar {
-    font-size: 18px; } }
+    font-size: 1px; } }
 
 @media only screen and (min-width: 826px) {
   .navbar {
@@ -93,11 +93,15 @@ h3 {
 
 #loginPage form input {
   height: 4rem;
-  font-size: 32px; }
+  font-size: 32px;
+  margin: 2rem 0; }
 
 #loginPage p {
   color: #4D91BF;
-  padding-bottom: 2rem; }
+  margin: 2rem 0; }
+
+#landingPageBtns {
+  margin-bottom: 2rem; }
 
 #loginBtn {
   background: #4D91BF;
@@ -116,154 +120,109 @@ h3 {
 #login {
   background: yellow; }
 
-#addressbookPage {
+#homePage {
+  background: #4D91BF;
+  position: relative; }
+  #homePage h1 {
+    background: #EEE;
+    margin-bottom: 0;
+    padding: 2rem 0; }
+  #homePage h2 {
+    margin: 0 0 0 0; }
+  #homePage section input {
+    background: #EEE;
+    border-color: #000; }
+
+#homePage input::-webkit-input-placeholder {
+  color: #95989A; }
+
+#homePage input:-ms-input-placeholder {
+  color: #95989A; }
+
+#homePage input::placeholder {
+  color: #95989A; }
+
+#all-list-content {
+  float: right;
+  border: 2px solid #EEE;
+  padding: 0;
+  margin: 5rem 0; }
+
+div.remove {
+  margin-top: 15px;
+  display: inline-block;
+  cursor: pointer;
+  color: red; }
+
+@media only screen and (min-width: 768px) {
+  #all-list-content {
+    width: 80%;
+    margin: 0 0 5rem 0; } }
+
+.listContentContainer {
+  background: #EEE;
+  padding: 0; }
+
+.contentList.container {
+  padding: 0 0 5px 0; }
+
+#sm-screen-sub-nav {
+  background: #EEE;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  margin-right: 20px; }
+
+#side-nav-bar {
+  background: #EEE;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 20%;
+  margin-right: 20px; }
+
+#add-event-btn {
+  margin: 2rem auto;
   background: #4D91BF; }
 
-#addressbookPage .row {
-  margin-right: 0; }
-
-#contactListSection {
-  width: calc(100% + 40px); }
-
-#contactList {
+#calender-wrapper {
   background: #4D91BF;
-  width: calc(100% + 55px);
-  min-height: 40rem;
-  float: left;
-  z-index: 999;
-  margin: 2rem 0 2rem -40px; }
-  #contactList li {
-    background: #FFF;
-    width: 100%;
-    text-transform: capitalize;
-    text-align: left;
-    list-style: none;
-    padding: 2rem 0 2rem 1.5rem;
-    border: 1px solid black; }
-    #contactList li span {
-      float: left;
-      margin: -1rem 1.5rem 0 0; }
+  margin-bottom: 5rem; }
 
-#contactList li:last-of-type {
-  position: relative; }
+#addEventModal label,
+#addEventModal input {
+  display: block; }
 
-@media only screen and (min-width: 992px) {
-  #contactList {
-    margin: 2rem 0;
-    float: left;
-    width: 100%; }
-    #contactList li {
-      width: calc(85% + 40px);
-      padding: 2rem 0 2rem 1.5rem; }
-      #contactList li span {
-        float: left;
-        margin: -1rem 1.5rem 0 0; } }
-
-#searchArea1 {
-  background: #4D91BF;
-  width: calc(100% - 30px);
-  padding: 0 15px 0 0;
-  margin: 2rem 0 2rem 3.5%; }
-
-#searchInput {
-  padding-right: 0px; }
-
-#searchArea2 {
-  background: #4D91BF;
+#addEventModal .lSideLabel {
   margin: 0 0 0 0; }
 
-#searchContacts1 .input-group {
-  width: calc(100% + 30px); }
+#addEventModal .lSideInput {
+  margin: 0 0 0 0; }
 
-#searchContacts1 input,
-#searchContacts2 input {
-  height: 50px; }
+#addEventModal .rSideLabel {
+  margin: 0 0 0 0; }
 
-@media only screen and (min-width: 720px) {
-  #searchArea2 {
-    margin: 2rem 0 2rem 0; } }
+#addEventModal .rSideInput {
+  margin: 0 0 0 0; }
 
-#addressbookPage .addBtn button {
-  background: url("/assets/add-icon.png") no-repeat center center;
-  background-size: contain;
-  border: none;
-  width: 50px;
-  height: 50px; }
+#addEventModal .add-new-event-btn {
+  background: #4D91BF; }
 
-#smallScreenAdd button {
-  margin: 0 15px 0 -44px;
-  z-index: 1000;
-  position: absolute;
-  bottom: 0;
-  right: 0; }
+@media only screen and (min-width: 765px) {
+  #addEventModal input:not(.different) {
+    margin-top: 12px; } }
 
-#largeScreenAdd button {
-  margin: 0 15px 0 -44px; }
+#notesPage h2 {
+  margin: 0 0 0 0; }
 
-#contactInfoSection {
-  background: #4D91BF;
-  float: left; }
-  #contactInfoSection #circle {
-    clear: both;
-    width: 150px;
-    height: 150px;
-    background: #EEE;
-    border-radius: 75px;
-    margin-left: auto;
-    margin-right: auto; }
-  #contactInfoSection .btn {
-    background: url("/assets/edit-icon.png") no-repeat center center;
-    background-size: contain;
-    border: none;
-    width: 40px;
-    height: 40px;
-    margin: -90px -200px 0 0; }
+#notesPage h2:last-of-type {
+  margin-top: 1.5rem; }
 
-@media only screen and (min-width: 720px) {
-  #circle {
-    width: 200px;
-    height: 200px;
-    border-radius: 100px; }
-  #contactInfoSection .btn {
-    width: 45px;
-    height: 45px;
-    margin: -95px -205px 0 0; } }
-
-@media only screen and (min-width: 992px) {
-  #contactInfoSection {
-    margin-left: -15px; }
-    #contactInfoSection #circle {
-      width: 225px;
-      height: 225px;
-      border-radius: 112.5px; }
-    #contactInfoSection .btn {
-      width: 50px;
-      height: 50px;
-      margin: -100px -290px 0 0; } }
-
-#contactName label,
-#contactName input,
-#contactPhone label,
-#contactPhone input {
-  display: block;
-  height: 45px; }
-
-#contactName label,
-#contactPhone label,
-#contactEmail label {
-  text-align: left; }
-
-#contactName input,
-#contactPhone input {
-  width: 100%; }
-
-#contactEmail label, #contactEmail input {
-  display: block;
-  height: 45px;
-  width: 100%; }
-
-#contactEmail input {
-  margin-bottom: 50px; }
+#inputMessage {
+  margin-bottom: 1.5rem; }
 
 #savedNotes {
   width: 100%;
@@ -279,9 +238,16 @@ h3 {
       float: right;
       margin: -1rem 1.5rem 0 0; }
 
+#notesPage .empty-space {
+  height: 3rem;
+  background: #4D91BF; }
+
+#myAccountPage h2 {
+  margin: 0 0 0 0; }
+
 #settingsList {
   width: 100%;
-  margin: -1rem 0 0 -4rem; }
+  margin: -1rem 0 6rem -4rem; }
   #settingsList li {
     width: calc(100% + 40px);
     text-transform: capitalize;
@@ -293,20 +259,32 @@ h3 {
       float: right;
       margin: -1rem 1.5rem 0 0; }
 
+#contactPage .container-fluid h2 {
+  width: 100%;
+  margin: 0 0 0 0; }
+
+#contactPage .container-fluid h3 {
+  width: 100%;
+  margin: 0 0 0 0; }
+
 #contactUs {
   padding-bottom: 25px; }
   #contactUs p {
-    text-align: left; }
+    text-align: left;
+    margin-top: 1.5rem; }
 
 #contactPage h3 {
   background: #4D91BF;
   color: #FFF;
   padding: 2rem 0;
-  margin-top: -4.5rem; }
+  margin: -4.5rem -1.5rem 1.5rem -1.5rem; }
 
 #contactPage label, #contactPage input {
   display: block;
   height: 45px; }
+
+#contactPage input {
+  margin-bottom: 1.5rem; }
 
 #contactPage label {
   text-align: left; }
@@ -314,115 +292,35 @@ h3 {
     font-size: 20px;
     color: #CC1600; }
 
+#contactPage input:focus:required:invalid {
+  background: #ffbfbf;
+  border-color: #900;
+  outline: none; }
+
+#contactPage input:focus:invalid {
+  outline: none; }
+
+#contactPage input:focus:valid {
+  background: #dff0d8;
+  border-color: #2ecc71; }
+
+#contactPage input:valid {
+  border-color: #2ecc71;
+  background-color: #dff0d8; }
+
+#contactPage input:focus:valid {
+  outline: none; }
+
 .error {
   color: #C30000;
   line-height: 1.2;
   margin: 5px auto; }
 
-input:focus:required:invalid {
-  background: #ffbfbf;
-  border-color: #900;
-  outline: none; }
-
-input:focus:invalid {
-  outline: none; }
-
-input:focus:valid {
-  background: #dff0d8;
-  border-color: #2ecc71; }
-
-/* This is our style for the valid fields*/
-input:valid {
-  border-color: #2ecc71;
-  background-color: #dff0d8; }
-
-input:focus:valid {
-  outline: none; }
+#contactBtns {
+  margin: 2rem 0; }
 
 footer {
   text-align: center;
   padding: 2rem 0;
   border-top: 3px solid #000;
   font-size: 20px; }
-
-.Calendar {
-  margin-bottom: 2em;
-  width: 800px;
-  margin: 20px auto; }
-
-.Calendar table {
-  width: 100%; }
-
-.Calendar > table {
-  border: 1px solid #d9d9d9;
-  boder-bottom-width: 3px; }
-
-.Calendar table th {
-  font-size: 12px;
-  text-transform: uppercase;
-  font-weight: 100;
-  background: #f7f7f7; }
-
-.Calendar table tr th:first-child, .Calendar table th:last-child {
-  background: #fffceb; }
-
-.Calendar table td {
-  width: 14%;
-  height: 120px;
-  vertical-align: top;
-  text-align: left;
-  color: #ccc; }
-
-.Calendar table tr:first-child td, .Calendar table table td {
-  width: auto;
-  height: auto;
-  text-align: inherit; }
-
-.Calendar table tr:first-child td {
-  background: #e6e6e6 !important;
-  color: #000; }
-
-.Calendar table tr td:first-child, .Calendar table tr td:last-child {
-  background: #fffef9; }
-
-.Calendar table table td[align="right"] {
-  text-align: right; }
-
-.Calendar table table td[align="center"] {
-  text-align: center; }
-
-.Calendar table .Content {
-  color: #555;
-  font-size: 12px; }
-
-.Calendar .dayEvent, .Calendar .selectedEvent {
-  margin-bottom: 2px; }
-
-.Calendar .dayEvent a,
-.Calendar .selectedEvent a {
-  padding: 2px 3px;
-  border-radius: 3px;
-  border-width: 1px;
-  border-style: solid;
-  display: block;
-  font-size: 12px; }
-
-.Calendar .dayEvent a:hover, .Calendar .selectedEvent a:hover {
-  text-decoration: none; }
-
-.Calendar .dayEvent a {
-  background: #4596cb;
-  border-color: #4596cb;
-  color: #fff; }
-
-.Calendar .dayEvent a:hover {
-  background: #4d9dda; }
-
-.Calendar .selectedEvent a {
-  background: #f0730b;
-  border-color: #f0730b;
-  color: #fff; }
-
-.Calendar .selectedEvent a:hover {
-  background: #cf640a;
-  border-color: #f0730b; }
