Fixed margin for top of jumbotron.

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -185,6 +185,10 @@ h3 {
   color: #95989A;
 }
 
+.jumbotron {
+  margin-top: 5rem
+}
+
 #all-list-content {
   float: right;
   border: 2px solid #EEE;
