--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,9 @@ h3 {
 #homePage input::placeholder {
   color: #95989A; }
 
+.jumbotron {
+  margin-top: 5rem; }
+
 #all-list-content {
   float: right;
   border: 2px solid #EEE;
