--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -2,8 +2,8 @@ html { font-size: 62.5%; }
 body {
   width: 100%;
   height: 100%;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
   margin-left: auto;
   margin-right: auto;
@@ -34,18 +34,22 @@ body {
 // Header Styles //
 ///////////////////
 header img {
-  width: 100px;
-  height: 100px;
+  width: 10rem;
+  height: 10rem;
+}
+
+h1 {
+  font-size: 30px;
+  font-weight: bold;
 }
 
 header h1 {
-  font-size: 35px;
-  font-weight: bold;
   text-align: center;
   padding-bottom: 2rem;
 }
 
 h2 {
+  font-size: 20px;
   background: #4D91BF;
   font-weight: bold;
   padding: 2rem 0;
@@ -60,21 +64,24 @@ section {
 
   h2 {
     color: #FFF;
-    font-size: 30px;
-    margin-left: -15px;
-    margin-right: -15px;
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
   }
 }
 
 h3 {
-  font-size: 27px;
+  font-size: 18px;
   font-weight: bold;
 }
 
-@media only screen and (min-width : 460px) {
-  header h1 {
+@media only screen and (min-width : 520px) {
+  h1 {
     font-size: 42px;
     padding-bottom: 1rem;
+  }
+
+  h2 {
+    font-size: 35px;
   }
 
   section h2 {
@@ -82,8 +89,7 @@ h3 {
   }
 
   h3 {
-    font-size: 32px;
-    font-weight: bold;
+    font-size: 30px;
   }
 
 }
@@ -92,8 +98,8 @@ h3 {
 // Other Styles //
 //////////////////
 .custom-icon {
-  width: 50px;
-  height: 50px;
+  width: 5rem;
+  height: 5rem;
 }
 
 .readMoreBtn {
@@ -108,23 +114,31 @@ h3 {
 ////////////////////////////
 // Index.html Page Styles //
 ////////////////////////////
+#loginPage {
+  width: 100%;
+}
+
 #loginPage h1 {
  color: #000;
  text-transform: uppercase;
 }
 
 #loginPage img {
-  width: 300px;
-  height: 300px;
-  margin-top: 8rem;
+  width: 20rem;
+  height: 20rem;
+  margin-top: 4rem;
 }
 
 #loginPage form {
+  width: 100%;
 
   input {
-    height: 4rem;
-    font-size: 32px;
-    margin: 2rem 0;
+    display: block;
+    width: 100%;
+    height: 5rem;
+    border: 2px solid #4D91BF;
+    padding: 1rem;
+    margin: 0 auto;
   }
 }
 
@@ -142,8 +156,7 @@ h3 {
   color: #FFF;
   text-transform: uppercase;
   text-decoration: none;
-  padding: 1em;
-
+  padding: 1.5rem;
 }
 
 #createBtn {
@@ -151,19 +164,42 @@ h3 {
   color: #FFF;
   text-transform: uppercase;
   text-decoration: none;
-  padding: 1em;
+  padding: 1.5rem;
 }
 
-#login {
-  background: yellow;
+@media only screen and (min-width : 520px) {
+  #loginPage img {
+    width: 30rem;
+    height: 30rem;
+    margin-top: 8rem;
+  }
+
+  #loginPage form {
+    input {
+      width: 47rem;
+      padding: 1rem;
+      margin: 1rem auto;
+    }
+
+    #rgstr_btn {
+      width: 47rem;
+      padding: 1.5rem;
+    }
+  }
 }
 
 ///////////////////////////////////////
 // Home.html Page Styles & Sub-Pages //
 ///////////////////////////////////////
-#homePage {
+#homePage,
+#home-appointment-page,
+#home-todo-page,
+#home-shopping-page,
+#home-notes-page {
   background: #4D91BF;
   position: relative;
+  @extend %remove-bootstrap-side-padding;
+  min-height: calc(100vh - 70px);
 
   h1 {
     background: #EEE;
@@ -179,32 +215,48 @@ h3 {
     background: #EEE;
     border-color: #000;
   }
-}
 
-#homePage input::placeholder {
-  color: #95989A;
+  input::placeholder {
+    color: #95989A;
+  }
 }
 
 .jumbotron {
-  margin-top: 5rem
+  margin-top: 5rem;
 }
 
 #all-list-content {
-  float: right;
   border: 2px solid #EEE;
   padding: 0;
   margin: 5rem 0;
 }
 
 div.remove {
-  margin-top: 15px;
+  margin-top: 1.5rem;
   display: inline-block;
   cursor: pointer;
-  color: red;
+  color: #CC1600;
+}
+
+div.edit {
+  margin-top: 1.5rem;
+  display: inline-block;
+  cursor: pointer;
+  color: #000;
 }
 
 @media only screen and (min-width : 768px) {
+  #homePage,
+  #home-appointment-page,
+  #home-todo-page,
+  #home-shopping-page,
+  #home-notes-page {
+    padding-left: 2.5rem;
+    padding-right: 1.5rem;
+  }
+
   #all-list-content {
+    float: right;
     width: 80%;
     margin: 0 0 5rem 0;
   }
@@ -219,24 +271,13 @@ div.remove {
   padding: 0 0 5px 0;
 }
 
-#overview-list-content {
-  @extend %remove-bootstrap-side-padding;
-}
-
-#appointment-list-content {
-  @extend %remove-bootstrap-side-padding;
-}
-
-#to-do-list-content {
-  @extend %remove-bootstrap-side-padding;
-}
-#shopping-list-content {
-  @extend %remove-bootstrap-side-padding;
-}
+#overview-list-content,
+#appointment-list-content,
+#to-do-list-content,
+#shopping-list-content,
 #notes-list-content {
   @extend %remove-bootstrap-side-padding;
 }
-
 
 #sm-screen-sub-nav {
   background: #EEE;
@@ -245,9 +286,8 @@ div.remove {
   left: 0;
   right: 0;
   width: 100%;
-  margin-right: 20px;
+  border-bottom: 1px solid #000;
 }
-
 
 #side-nav-bar {
   background: #EEE;
@@ -256,7 +296,7 @@ div.remove {
   bottom: 0;
   left: 0;
   width: 20%;
-  margin-right: 20px;
+  margin-right: 2rem;
 }
 
 ///////////////////////////////
@@ -264,7 +304,7 @@ div.remove {
 ///////////////////////////////
 #add-event-btn {
   margin: 2rem auto;
-  background: #4D91BF;
+  background: #029600;
 }
 
 #calender-wrapper {
@@ -272,22 +312,19 @@ div.remove {
   margin-bottom: 5rem;
 }
 
+#addEventModal {
+  padding: 1.5px;
+
+  label {
+    text-align: justify;
+    padding-left: 0;
+    margin-top: 1rem;
+  }
+}
+
 #addEventModal label,
 #addEventModal input {
   display: block;
-}
-
-#addEventModal .lSideLabel {
-  margin: 0 0 0 0;
-}
-#addEventModal .lSideInput {
-  margin: 0 0 0 0;
-}
-#addEventModal .rSideLabel {
-  margin: 0 0 0 0;
-}
-#addEventModal .rSideInput {
-  margin: 0 0 0 0;
 }
 
 #addEventModal .add-new-event-btn {
@@ -296,7 +333,11 @@ div.remove {
 
 @media only screen and (min-width : 765px) {
   #addEventModal input:not(.different) {
-    margin-top: 12px;
+    margin-top: 2px;
+  }
+
+  #addEventModal label {
+    margin-top: 0;
   }
 }
 
@@ -305,31 +346,51 @@ div.remove {
 ////////////////////////////
 #notesPage {
   @extend %reset-all-space;
+  min-height: calc(100vh - 70px);
+
+
+  button {
+    text-transform: uppercase;
+  }
 }
 
 #notesPage h2 {
-  margin: 0 0 0 0;
+  margin: 0 0 1rem 0;
 }
 
 #notesPage h2:last-of-type {
   margin-top: 1.5rem;
 }
 
+#notesPage form {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+#noteForm {
+  background: #FFF;
+}
+
 #inputMessage {
   margin-bottom: 1.5rem;
 }
 
+#noteFormBtns {
+  background: #FFF;
+}
+
 #savedNotes {
   width: 100%;
-  margin: -1rem 0 0 -4rem;
+  margin: 0 0 0 -4rem;
 
   li {
-    width: calc(100% + 40px);
+    width: 100%;
     text-transform: capitalize;
     text-align: left;
     list-style: none;
     padding: 2rem 0 2rem 1.5rem;
     border-bottom: 1px solid black;
+    word-break: break-word;
 
     span {
       float: right;
@@ -347,10 +408,15 @@ div.remove {
 ////////////////////////////////
 #myAccountPage {
   @extend %reset-all-space;
+  min-height: calc(100vh - 70px);
 }
 
 #myAccountPage h2 {
-  margin: 0 0 0 0;
+  margin: 0 0 1rem 0;
+}
+
+#userGreeting {
+  text-transform: capitalize;
 }
 
 #settingsList {
@@ -372,26 +438,67 @@ div.remove {
   }
 }
 
+#usernameEditBtns,
+#passwordEditBtns {
+  display: inline-block;
+}
+
+.editUsrUn,
+.editUsrPwd {
+  padding: 1.5px;
+
+  .control-label {
+    text-align: left;
+    padding-left: 0;
+    margin-top: 1rem;
+  }
+}
+
+.editUsrUn label,
+.editUsrPwd label,
+.editUsrUn input,
+.editUsrPwd input {
+  display: block;
+}
+
+.editUsrUn .add-new-event-btn,
+.editUsrPwd .add-new-event-btn {
+  background: #4D91BF;
+}
+
+@media only screen and (min-width : 765px) {
+  .editUsrUn,
+  .editUsrPwd {
+    margin-top: 2px;
+  }
+
+  .editUsrUn .control-label,
+  .editUsrPwd .control-label {
+    margin-top: 0;
+  }
+}
 
 //////////////////////////////
 // Contact.html Page Styles //
 //////////////////////////////
+#contactPage {
+  min-height: calc(100vh - 70px);
+}
+
 #contactPage .container-fluid h2 {
   width: 100%;
   margin: 0 0 0 0;
   @extend %remove-bootstrap-side-padding;
-
 }
 
 #contactPage .container-fluid h3 {
   width: 100%;
   margin: 0 0 0 0;
   @extend %remove-bootstrap-side-padding;
-
 }
 
 #contactUs {
-  padding-bottom: 25px;
+  padding-bottom: 2.5rem;
 
   p {
     text-align: left;
@@ -409,8 +516,7 @@ div.remove {
 
 #contactPage label, #contactPage input {
   display: block;
-  height: 45px;
-
+  height: 4.5rem;
 }
 
 #contactPage input {
@@ -432,21 +538,28 @@ div.remove {
 #contactPage input:focus:required:invalid {
   background: #ffbfbf;
   border-color: #900;
-  outline: none; }
+  outline: none;
+}
 
 #contactPage input:focus:invalid {
-  outline: none; }
+  outline: none;
+}
 
 #contactPage input:focus:valid {
   background: #dff0d8;
-  border-color: #2ecc71; }
-
-#contactPage input:valid {
   border-color: #2ecc71;
-  background-color: #dff0d8; }
+}
 
-#contactPage input:focus:valid {
-  outline: none; }
+#contactPage input:valid
+{
+  border-color: #2ecc71;
+  background-color: #dff0d8;
+}
+
+#contactPage input:focus:valid
+{
+  outline: none;
+}
 
 .error {
   color: $error-accent;
@@ -456,6 +569,55 @@ div.remove {
 
 #contactBtns {
   margin: 2rem 0;
+
+  button {
+    text-transform: uppercase;
+  }
+}
+
+////////////////////////
+// Signup Page Styles //
+////////////////////////
+#signupPage {
+  background: #F2F2F2;
+  width: 100%;
+}
+
+#backBtn {
+  background: #CC1600;
+  color: #FFF;
+  margin: -70px 0 0 0;
+  float: left;
+  vertical-align: middle;
+}
+
+#signupPage h1 {
+ color: #000;
+ text-transform: uppercase;
+ margin-top: 10rem;
+}
+
+#signupPage form {
+  width: 100%;
+  height: calc(100vh - 70px);
+
+  input {
+    display: block;
+    width: 100%;
+    height: 5rem;
+    border: 2px solid #4D91BF;
+    padding: 1rem;
+    margin: 1rem auto;
+  }
+}
+
+#rgstr_btn {
+  background: #4D91BF;
+  width: 100%;
+  color: #FFF;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem;
 }
 
 //////////////////
@@ -465,5 +627,27 @@ footer {
   text-align: center;
   padding: 2rem 0;
   border-top: 3px solid #000;
-  font-size: 20px;
+  border-bottom: 3px solid #000;
+  font-size: 15px;
+  height: 70px;
+}
+
+@media only screen and (min-width : 520px) {
+  #signupPage form {
+
+    input {
+      width: 47rem;
+      padding: 1rem;
+      margin: 1rem auto;
+    }
+
+    #rgstr_btn {
+      width: 47rem;
+      padding: 1.5rem;
+    }
+
+    footer {
+      font-size: 20px;
+    }
+  }
 }
